Fix warnings in BackupService and SerializationService